# watchdog

./: .example.env  .gitignore  .gitlab-ci.yml  README.md  Untitled-1.html  dev-compose.yml  docker-compose.yml
watchdog_be/: .example.env  Dockerfile  manage.py  pyproject.toml
watchdog_be/watchdog/: admin.py  consumers.py  middleware.py  models.py  routing.py  urls.py  views.py
watchdog_be/watchdog/migrations/: 0001_initial.py  0002_watchroom_current_video.py  0002_watchroom_watchroomwatcher.py  0003_watchroomwatcher_color.py
watchdog_be/watchdog_be/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
watchdog_fe/: Dockerfile  nginx.conf  package-lock.json  package.json
watchdog_fe/public/: index.html  manifest.json
watchdog_fe/src/: index.css  index.tsx
watchdog_fe/src/app/: App.tsx  LoginForm.tsx  SignUpForm.tsx  route.tsx
watchdog_fe/src/app/home/: Dashboard.tsx  Home.tsx  Landing.tsx
watchdog_fe/src/app/home/dashboard/: Dashboard.tsx  JoinRoom.tsx  NavBar.tsx  NewRoom.tsx
watchdog_fe/src/app/home/landing/: Landing.tsx  LoginForm.tsx
watchdog_fe/src/app/watchRoom/: WatchRoom.tsx
watchdog_fe/src/app/watchRoom/chat/: Chat.tsx  ChatBox.tsx  ChatForm.tsx  ChatHeader.tsx  ChatMessage.tsx
watchdog_fe/src/app/watchRoom/player/: Player.tsx  PlayerControl.tsx  (+1 more)
watchdog_fe/src/atom/: PlayerStateAtom.ts  currentRoomAtom.ts  playerProgressAtom.ts  playerStateAtom.ts  roomSocketAtom.ts  userAtom.ts  watchRoomsAtom.ts
watchdog_fe/src/type/: chatMessage.ts  dto.ts  watchRoom.ts
watchdog_fe/src/util/: auth.ts  jwtInterceptor.ts  urlResolver.ts
