[tool.poetry]
name = "watchdog_be"
version = "0.1.0"
description = ""
authors = ["Ilman Nafian <milmannafian04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
Django = "^3.1.2"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
